# Snake_AI

./: CMakeLists.txt  README.md  common.h  config.h  config.ini  config.txt  genetic_algorithm.cpp  genetic_algorithm.h  main.cpp  neural_network.cpp  neural_network.h  nn.cpp  nn.h  point.h  renderer.cpp  renderer.h  snake  snake.cpp  snake.h  testingNN.cpp
.cache/clangd/index/: direction.h.05F1859154754EF3.idx  food.cpp.04B72484D01C155A.idx  food.h.C59FCB94B29DC6CC.idx  game.cpp.9FF70E627516E779.idx  game.h.2D05DE2AEB958F2B.idx  game_environment.cpp.FAB30D2C35D23A41.idx  game_environment.h.53C4F20530792B7A.idx  game_state.cpp.4E1631C2FDD328AC.idx  game_state.h.7B848743B366E63B.idx  genetic_algorithm.cpp.F795369280EF6537.idx  genetic_algorithm.h.9A729287C44E7A08.idx  main.cpp.5DB9B773F22D9638.idx  neural_network.cpp.DA5F80366250C815.idx  neural_network.h.68E0AEC91A0AC48A.idx  play_mode.cpp.B958DC91D890ADC3.idx  play_mode.h.396928871C89192C.idx  snake.cpp.99591601FCC1367B.idx  snake.h.919F1FEE2FA6E23F.idx  snake_agent.cpp.833D7445C2A63EBC.idx  snake_agent.h.C9CB80DA5EBAD992.idx  training.cpp.BE6B6A4AD0EC55E7.idx  training.h.7DA90FCEB216DBCA.idx  training_visualizer.cpp.459A10337C3DE348.idx  training_visualizer.h.184069DBCF9BE773.idx
include/: direction.h  food.h  game.h  game_environment.h  game_state.h  genetic_algorithm.h  neural_network.h  play_mode.h  snake.h  snake_agent.h  training.h  training_visualizer.h
src/: food.cpp  game.cpp  game_environment.cpp  game_state.cpp  genetic_algorithm.cpp  main  main.cpp  neural_network.cpp  nn.cpp  nn.h  play_mode.cpp  snake.cpp  snake.h  snake_agent.cpp  test  training.cpp  training_visualizer.cpp
